--- a/index.html
+++ b/index.html
@@ -49,9 +49,5 @@
 
 {"name":"Myanmar Music",
 "image":"https://i.imgur.com/oIGqHxO.jpg",
-"link":"https://l1-xl1.myanmarnet.com/relay/music/ch1/stream_hi/index.m3u8"},
-
-  {"name":"4-FUN TV",
-"image":"https://i.imgur.com/6XKWwda.jpg",
-"link":"https://stream.4fun.tv:8888/hls/4f.m3u8"}
+"link":"https://l1-xl1.myanmarnet.com/relay/music/ch1/stream_hi/index.m3u8"}
 ]
