--- a/index.html
+++ b/index.html
@@ -1,53 +1,32 @@
-[
-  {"name":"Mahar",
-"image":"https://i.imgur.com/tsIf0dX.jpg",
-"link":"https://tv.mahar.live/mahar/website.stream/playlist.m3u8"},
-  
-    {"name":"mntv-4",
-"image":"https://i.imgur.com/MzhybLI.jpg",
-"link":"http://183.89.246.119:8881/play/a07u/index.m3u8"},
+[ {"name":"Mahar", "image":"https://i.imgur.com/tsIf0dX.jpg", "link":"https://tv.mahar.live/mahar/website.stream/playlist.m3u8"}, 
 
-  {"name":"Channel-7",
-"image":"https://i.imgur.com/inUk1P7.jpg",
-"link":"http://183.89.246.119:8881/play/a07v/index.m3u8"},
+{"name":"mntv-4", "image":"https://i.imgur.com/MzhybLI.jpg", "link":"http://183.89.246.119:8881/play/a07u/index.m3u8"}, 
 
-  {"name":"Channel-ME",
-"image":"https://i.imgur.com/zNLqA3T.jpg",
-"link":"https://5a13fe32ef748.streamlock.net/mmplay/mrtv-entertainment/chunklist_w1902733621.m3u8"},
-  
-    {"name":"Channel-9",
-"image":"https://i.imgur.com/SfAomKF.jpg",
-"link":"http://183.89.246.119:8881/play/a07y/index.m3u8"},
+{"name":"Channel-7", "image":"https://i.imgur.com/inUk1P7.jpg", "link":"http://183.89.246.119:8881/play/a07v/index.m3u8"}, 
 
-  {"name":"TVM",
-"image":"https://i.imgur.com/COtB5dD.jpg",
-"link":"http://203.81.84.130/hls/mwd_serie/index.m3u8"},
+{"name":"Channel-ME", "image":"https://i.imgur.com/zNLqA3T.jpg", "link":"https://5a13fe32ef748.streamlock.net/mmplay/mrtv-entertainment/chunklist_w1902733621.m3u8"}, 
 
-  {"name":"MNTV",
-"image":"https://i.imgur.com/bZuyUpk.jpg",
-"link":"https://l1-xl1.myanmarnet.com/relay/mntv/ch1/stream_hi/index.m3u8"},
-  
-    {"name":"MITV",
-"image":"https://i.imgur.com/hzjpCDY.jpg",
-"link":"https://5a13fe32ef748.streamlock.net/mmplay/mitv/chunklist_w1847559662.m3u8"},
+{"name":"Channel-9", "image":"https://i.imgur.com/SfAomKF.jpg", "link":"http://183.89.246.119:8881/play/a07y/index.m3u8"}, 
 
-  {"name":"Channel-K",
-"image":"https://i.imgur.com/kiZCTJ7.jpg",
-"link":"https://l1-xl1.myanmarnet.com/relay/channelk/ch1/stream_hi/index.m3u8"},
+{"name":"TVM", "image":"https://i.imgur.com/COtB5dD.jpg", "link":"http://203.81.84.130/hls/mwd_serie/index.m3u8"}, 
 
-  {"name":"ForTune TV",
-"image":"https://i.imgur.com/XogjiZ9.jpg",
-"link":"http://183.89.246.119:8881/play/a082/index.m3u8"},
-  
-    {"name":"YTV",
-"image":"https://i.imgur.com/t2o1F7Q.jpg",
-"link":"http://183.89.246.119:8881/play/a081/index.m3u8"},
+{"name":"MNTV", "image":"https://i.imgur.com/bZuyUpk.jpg", "link":"https://l1-xl1.myanmarnet.com/relay/mntv/ch1/stream_hi/index.m3u8"}, 
 
-  {"name":"5-Plus",
-"image":"https://i.imgur.com/aWvsJkr.jpg",
-"link":"https://5a13fe32ef748.streamlock.net/mmplay/5plus/chunklist_w952929156.m3u8"},
+{"name":"MITV", "image":"https://i.imgur.com/hzjpCDY.jpg", "link":"https://5a13fe32ef748.streamlock.net/mmplay/mitv/chunklist_w1847559662.m3u8"}, 
 
-{"name":"Myanmar Music",
-"image":"https://i.imgur.com/oIGqHxO.jpg",
-"link":"https://l1-xl1.myanmarnet.com/relay/music/ch1/stream_hi/index.m3u8"}
+{"name":"Channel-K", "image":"https://i.imgur.com/kiZCTJ7.jpg", "link":"https://l1-xl1.myanmarnet.com/relay/channelk/ch1/stream_hi/index.m3u8"}, 
+
+{"name":"ForTune TV", "image":"https://i.imgur.com/XogjiZ9.jpg", "link":"http://183.89.246.119:8881/play/a082/index.m3u8"}, 
+
+{"name":"YTV", "image":"https://i.imgur.com/t2o1F7Q.jpg", "link":"http://183.89.246.119:8881/play/a081/index.m3u8"}, 
+
+{"name":"5-Plus", "image":"https://i.imgur.com/aWvsJkr.jpg", "link":"https://5a13fe32ef748.streamlock.net/mmplay/5plus/chunklist_w952929156.m3u8"}, 
+
+{"name":"Myanmar Music", "image":"https://i.imgur.com/oIGqHxO.jpg", "link":"https://l1-xl1.myanmarnet.com/relay/music/ch1/stream_hi/index.m3u8"},
+
+{"name":"CN Cartoon", "image":"https://i.imgur.com/vRm1mlr.jpg", "link":"https://shls-cartoon-net-prod-dub.shahid.net/out/v1/dc4aa87372374325a66be458f29eab0f/index_4.m3u8"},
+ 
+{"name":"Sony Cartoon", "image":"https://i.imgur.com/ILujPCz.jpg", "link":"https://dai.google.com/ssai/event/GPY7RqOrSkmKJ8z1GbVNhg/master.m3u8"}, 
+
+{"name":"Zoom", "image":"https://i.imgur.com/tIxi1t9.jpg", "link":"https://zoomoo-samsungau.amagi.tv/playlist.m3u8"}
 ]
